Further reduce page title size for better proportions

--- a/outstanding.html
+++ b/outstanding.html
@@ -130,7 +130,7 @@
         
         <!-- Header content -->
         <div class="relative z-10 text-center">
-            <h1 class="text-xl md:text-3xl lg:text-4xl font-black text-white mb-2 tracking-tight">
+            <h1 class="text-base md:text-xl lg:text-2xl font-black text-white mb-2 tracking-tight">
                 OUTSTANDING WILAYAH 3
             </h1>
             <p class="text-blue-100 text-xs md:text-sm font-medium">Dashboard Monitoring dan Analisis Data</p>
