🔧 Fix filter input text visibility in table
- Add explicit text color (text-gray-800) to filter input fields
- Add background color (bg-white) to ensure visibility
- Add focus outline styling (focus:outline-none)
- Fix issue where typed text was invisible in filter boxes
- Improve user experience on table filtering functionality

--- a/outstanding.html
+++ b/outstanding.html
@@ -1050,7 +1050,7 @@
             } else {
                 const input = document.createElement("input");
                 input.type = "text";
-                input.className = "w-full px-2 py-1 text-xs border border-gray-300 rounded focus:ring-2 focus:ring-blue-500 focus:border-blue-500";
+                input.className = "w-full px-2 py-1 text-xs text-gray-800 bg-white border border-gray-300 rounded focus:ring-2 focus:ring-blue-500 focus:border-blue-500 focus:outline-none";
                 input.style.minWidth = "60px";
                 input.placeholder = "Filter";
                 input.addEventListener("input", function() {
