Fix API URL - use correct Netlify Functions path /.netlify/functions instead of /api

--- a/outstanding.html
+++ b/outstanding.html
@@ -2091,7 +2091,7 @@
                 return 'http://localhost:8001/api';
             } else {
                 // Production (Netlify) - use serverless functions
-                return '/api';
+                return '/.netlify/functions';
             }
         }
 
