Update test file

--- a/test-api-debug.html
+++ b/test-api-debug.html
@@ -82,7 +82,7 @@
         }
 
         async function testProduction() {
-            await testAPI('https://hadipurwana.netlify.app/.netlify/functions', 'Production');
+            await testAPI('https://outstandingw3.netlify.app/.netlify/functions', 'Production');
         }
 
         async function testBoth() {
