Hide GitHub Repository, Browser localStorage cards, and Quick Actions sections in PKK Clear Management interface

--- a/outstanding.html
+++ b/outstanding.html
@@ -695,7 +695,7 @@
                 </div>
 
                 <!-- Actions -->
-                <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6">
+                <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6" style="display: none;">
                     <div class="flex items-center justify-between">
                         <div>
                             <p class="text-sm font-medium text-gray-600">Quick Actions</p>
@@ -712,7 +712,7 @@
             </div>
 
             <!-- Storage Comparison -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6" style="display: none;">
                 <!-- GitHub Storage Info -->
                 <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6">
                     <div class="flex items-center mb-4">
@@ -791,7 +791,7 @@
             </div>
 
             <!-- Sync Controls -->
-            <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6 mb-6">
+            <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6 mb-6" style="display: none;">
                 <div class="flex items-center justify-between mb-4">
                     <h3 class="text-lg font-semibold text-gray-800">Data Synchronization</h3>
                     <button id="refreshStatsBtn" onclick="updateIgnoredStats()" class="px-3 py-1 bg-blue-500 hover:bg-blue-600 text-white text-sm rounded-md transition-colors">
